argocd/resume/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rx-resume
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: rx-resume
  template:
    metadata:
      labels:
        app: rx-resume
    spec:
      containers:
        - name: rx-resume
          image: harbor.yanello.net/ghcr/amruthpillai/reactive-resume:v5.3.0@sha256:c487ec5edcfe054bcb312fcd498f868e56f274756d0046b01c83f210855017ab
          ports:
            - containerPort: 3010
          resources:
            limits:
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 2048Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: printer
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: printer
  template:
    metadata:
      labels:
        app: printer
    spec:
      containers:
        - name: printer
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 96Mi
          image: harbor.yanello.net/docker/chromedp/headless-shell:155.0.8059.26@sha256:a6beb6f169686744e05912a3ae25d97ee808510c9370142b00c3eb38c983db0e
          ports:
            - containerPort: 9222
