argocd/resume/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rx-resume
spec:
  ports:
    - port: 3010
      targetPort: 3010
  selector:
    app: rx-resume
---
apiVersion: v1
kind: Service
metadata:
  name: printer
spec:
  ports:
    - port: 9222
      targetPort: 9222
  selector:
    app: printer
