argocd/resume/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: RxResume
    gethomepage.dev/icon: sh-reactive-resume
    gethomepage.dev/description: "A free and open-source resume builder that simplifies\
      \ the process of creating, updating, and sharing your resume. "
    gethomepage.dev/pod-selector: app=rx-resume
  labels:
    app.kubernetes.io/instance: resume-app
  name: resume-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - rxresume.yanello.net
    - resume.yanello.net
  rules:
    - backendRefs:
        - name: rx-resume
          namespace: resume
          port: 3010
